changes in update recommendations controller
