# src/controllers/recommendation-controllers/crud/update-recommendation.controller.ts
@@ -6,18 +6,6 @@ import { Request, Response } from "express"
 import mongoose from "mongoose"
 import path from "path"
 
-// TODO:
-/* NOT USED
- bloggerId,
-    quote,
-    rating,
-    date,
-    url,
-    mealName,
-    mealDescription,
-    categories,
-
-*/
 export const updateRecommendation = async (req: Request, res: Response) => {
   const { id } = req.params
   const {
@@ -28,8 +16,9 @@ export const updateRecommendation = async (req: Request, res: Response) => {
     url,
     mealName,
     mealDescription,
-    categories,
+    categoriesIds,
     restaurantId,
+    locationsCriteria,
     locations
   } = req.body
   const files = req.files as Express.Multer.File[]
@@ -44,7 +33,20 @@ export const updateRecommendation = async (req: Request, res: Response) => {
 
     const oldRestaurantId = recommendation.restaurant.toString()
 
-    // Handle blogger, restaurant, categories, and other field updates...
+    // Update recommendation fields
+    recommendation.blogger = bloggerId
+    recommendation.quote = quote
+    recommendation.rating = rating
+    recommendation.date = date
+    recommendation.url = url
+    recommendation.mealName = mealName
+    recommendation.mealDescription = mealDescription
+    recommendation.categories = categoriesIds.map(
+      (id: string) => new mongoose.Types.ObjectId(id)
+    )
+    recommendation.restaurant = new mongoose.Types.ObjectId(restaurantId)
+
+    // Handle meal images update
     if (files?.length) {
       const oldMealImages = recommendation.mealImages
       const fileNames = oldMealImages.map(img => path.basename(img))
@@ -52,16 +54,24 @@ export const updateRecommendation = async (req: Request, res: Response) => {
 
       const uploadedImages = await uploadFilesToGCS(files, "recommendations")
       recommendation.mealImages = uploadedImages
+    } else {
+      // TODO: Enable after fixing google cloud storage
+      // const oldMealImages = recommendation.mealImages
+      // const fileNames = oldMealImages.map(img => path.basename(img))
+      // await deleteFilesFromGCS(fileNames, "recommendations")
+      // recommendation.mealImages = []
     }
 
     await recommendation.save()
 
     // Handle locations update
-    if (locations === "ALL_LOCATIONS") {
+    if (locationsCriteria === "ALL_LOCATIONS") {
+      // Remove from all old restaurant locations
       await Location.updateMany(
         { restaurant: oldRestaurantId },
         { $pull: { recommendations: recommendation._id } }
       )
+      // Add to all new restaurant locations
       await Location.updateMany(
         { restaurant: restaurantId },
         { $push: { recommendations: recommendation._id } }
@@ -70,10 +80,13 @@ export const updateRecommendation = async (req: Request, res: Response) => {
       const selectedLocations = Array.isArray(locations)
         ? locations.map((loc: string) => new mongoose.Types.ObjectId(loc))
         : []
+
+      // Remove from all current locations
       await Location.updateMany(
         { recommendations: recommendation._id },
         { $pull: { recommendations: recommendation._id } }
       )
+      // Add to selected locations
       await Location.updateMany(
         { _id: { $in: selectedLocations } },
         { $push: { recommendations: recommendation._id } }
